--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                         <div class="info-icon"><i class="fas fa-phone"></i></div>
                         <div class="info-text">
                             <h4>Telefone</h4>
-                            <p>(11) 99999-9999</p>
+                            <p>(11) 98382-9620</p>
                         </div>
                     </div>
                     <div class="info-item">
@@ -378,7 +378,7 @@
                 <h4>Contato</h4>
                 <ul>
                     <li><i class="fas fa-envelope"></i> contato@3hservicos.com.br</li>
-                    <li><i class="fas fa-phone"></i> (11) 99999-9999</li>
+                    <li><i class="fas fa-phone"></i> (11) 98382-9620</li>
                     <li><i class="fas fa-map-marker-alt"></i> Cotia, SP</li>
                 </ul>
             </div>
@@ -387,6 +387,16 @@
             <p>&copy; 2025 3H Serviços de Informática. Todos os direitos reservados.</p>
         </div>
     </footer>
+
+    <!-- WhatsApp Floating Button -->
+    <a href="https://wa.me/5511983829620?text=Olá!%20Vim%20através%20do%20site%20e%20gostaria%20de%20obter%20informações%20sobre%20os%20serviços%20da%203H%20Serviços%20de%20Informática." 
+       class="whatsapp-button" 
+       target="_blank" 
+       rel="noopener noreferrer"
+       aria-label="Fale conosco no WhatsApp">
+        <i class="fab fa-whatsapp"></i>
+        <span class="whatsapp-tooltip">Fale conosco</span>
+    </a>
 
     <script src="main.js"></script>
 </body>
