--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- Hero Section -->
     <section class="hero" id="inicio">
         <h1>3H Serviços de Informática</h1>
-        <p class="hero-subtitle">Profissionais de TI com ampla experiência em desenvolvimento de software</p>
+        <p class="hero-subtitle">Profissionais de TI com ampla experiência em desenvolvimento de software há mais de 15 anos</p>
         <p class="hero-description">Transformamos ideias em soluções tecnológicas inovadoras e eficientes</p>
         <div class="location"><i class="fas fa-map-marker-alt"></i> Cotia, São Paulo, Brasil</div>
         <div class="hero-buttons">
@@ -53,22 +53,22 @@
         <div class="stats-container">
             <div class="stat-card">
                 <div class="stat-icon"><i class="fas fa-project-diagram"></i></div>
-                <div class="stat-number" data-target="150">0</div>
+                <div class="stat-number" data-target="91">0</div>
                 <div class="stat-label">Projetos Entregues</div>
             </div>
             <div class="stat-card">
                 <div class="stat-icon"><i class="fas fa-users"></i></div>
-                <div class="stat-number" data-target="80">0</div>
+                <div class="stat-number" data-target="49">0</div>
                 <div class="stat-label">Clientes Satisfeitos</div>
             </div>
             <div class="stat-card">
                 <div class="stat-icon"><i class="fas fa-calendar-alt"></i></div>
-                <div class="stat-number" data-target="10">0</div>
+                <div class="stat-number" data-target="15">0</div>
                 <div class="stat-label">Anos de Experiência</div>
             </div>
             <div class="stat-card">
                 <div class="stat-icon"><i class="fas fa-code"></i></div>
-                <div class="stat-number" data-target="20">0</div>
+                <div class="stat-number" data-target="97">0</div>
                 <div class="stat-label">Tecnologias Dominadas</div>
             </div>
         </div>
@@ -99,6 +99,17 @@
                     <div class="service-icon"><i class="fas fa-cloud"></i></div>
                     <h3>Desenvolvimento Cloud</h3>
                     <p>Implementação de soluções em nuvem, arquiteturas escaláveis, migração de sistemas e otimização de infraestrutura cloud para máxima eficiência.</p>
+                </div>
+                <div class="service-card">
+                    <div class="service-icon"><i class="fas fa-cube"></i></div>
+                    <h3>Infraestrutura como Código (IaC) & DevOps</h3>
+                    <p>Implementação de infraestrutura como código para automação de processos, aumento da eficiência operacional e facilitada a gestão de ambientes de desenvolvimento e produção containerizado.</p>
+                    <p>Criamos e gerenciamos pipelines de CI/CD (Continuous Integration/Continuous Deployment) para automação de builds, testes e implantação de software.</p>
+                </div>
+                <div class="service-card">
+                    <div class="service-icon"><i class="fas fa-chalkboard-teacher"></i></div>
+                    <h3>Treinamento, Capacitação e Suporte Técnico</h3>
+                    <p>Oferecemos treinamentos personalizados para empresas e profissionais, capacitando-os para utilizar as soluções de TI de forma eficiente e segura. Também oferecemos suporte técnico para garantir que as soluções implantadas estejam funcionando corretamente e com o máximo de performance.</p>
                 </div>
             </div>
         </div>
