--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <!-- Header -->
@@ -409,6 +409,6 @@
         <span class="whatsapp-tooltip">Fale conosco</span>
     </a>
 
-    <script src="main.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 </html>
