--- a/html/index.html
+++ b/html/index.html
@@ -176,40 +176,50 @@
             <div class="clients-grid">
                 <div class="client-item">
                     <div class="client-logo">
-                        <i class="fas fa-building"></i>
-                        <span>Empresa A</span>
+                        <img src="/img/mondial_logo.png" alt="Mondial Eletrodomésticos" >
                     </div>
                 </div>
                 <div class="client-item">
                     <div class="client-logo">
-                        <i class="fas fa-building"></i>
-                        <span>Empresa B</span>
+                        <img src="/img/mktech_logo.png" alt="MK Tech Solutions">
                     </div>
                 </div>
                 <div class="client-item">
                     <div class="client-logo">
-                        <i class="fas fa-building"></i>
-                        <span>Empresa C</span>
+                        <img src="/img/te_logo.png" alt="Total Energies">
                     </div>
                 </div>
                 <div class="client-item">
                     <div class="client-logo">
-                        <i class="fas fa-building"></i>
-                        <span>Empresa D</span>
+                        <img src="/img/santander_logo.png" alt="Banco Santander">
                     </div>
+                    <span>Banco Santander</span>
                 </div>
                 <div class="client-item">
                     <div class="client-logo">
-                        <i class="fas fa-building"></i>
-                        <span>Empresa E</span>
+                        <img src="/img/arctica_logo.png" alt="Arctica Soluções Tecnológicas">
                     </div>
+                    <span>Arctica Soluções Tecnológicas</span>
                 </div>
                 <div class="client-item">
                     <div class="client-logo">
-                        <i class="fas fa-building"></i>
-                        <span>Empresa F</span>
+                        <img src="/img/mazzini_logo.png" alt="Mazzini Administração e Empreitas">
+                    </div>
+                    <span>Administração e Empreitas</span>
+                </div>
+                <div class="client-item">
+                    <div class="client-logo">
+                        <img src="/img/crf_logo.png" alt="Carrefour">
+                    </div>
+                    <span>Carrefour</span>
+                </div>
+                <div class="client-item">
+                    <div class="client-logo">
+                        <img src="/img/gpa_logo.png" alt="Grupo Pão de Açúcar">
                     </div>
                 </div>
+      
+         
             </div>
         </div>
     </section>
